Bug 509047 - Defining a property that forces a dense array to become sparse shouldn't call a setter. r=brendan.